--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,24 +1,21 @@
-.App {
-  text-align: center;
+.grid-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  width: 400px;
+  height: 400px;
+  justify-content: space-between;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.square {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+  margin: 10px;
 }
